@@ -1,0 +1,5 @@
+# This is needed for D-BUS 0.34, which doesn't work with Python < 2.4
+# We use this in place of the original dbus.services module, which prevents
+# us from importing dbus.
+
+# Happily, it isn't actually needed so we can leave it blank :-)
